[BL-186] Added /hosts (POST) API
