# swagger/api.yaml
@@ -136,34 +136,6 @@ paths:
           description: "Invalid IDs supplied"
         404:
           description: "Product not found"
-    put:
-      tags:
-      - product
-      summary: "Update an existing Product"
-      description: ""
-      operationId: updateProduct
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "body"
-        description: "Product object that needs to be updated to the store"
-        required: true
-        schema:
-          $ref: "#/definitions/Product"
-      responses:
-        200:
-          description: successfully updated
-          schema:
-            $ref: '#/definitions/UpdateProductResponse'
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Product not found"
-        405:
-          description: "Validation exception"
   /products/{productId}:
     get:
       tags:
@@ -188,6 +160,39 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Product not found"
+    put:
+      tags:
+      - product
+      summary: "Update an existing Product"
+      description: ""
+      operationId: updateProductById
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "productId"
+        in: "path"
+        description: "ID of Product to return"
+        required: true
+        type: string
+      - in: "body"
+        name: "body"
+        description: "Product object that needs to be updated to the store"
+        required: true
+        schema:
+          $ref: "#/definitions/Product"
+      responses:
+        200:
+          description: successfully updated
+          schema:
+            $ref: '#/definitions/UpdateProductResponse'
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Product not found"
+        405:
+          description: "Validation exception"
     delete:
       tags:
       - product
@@ -308,6 +313,44 @@ paths:
           description: "Invalid input supplied"
         404:
           description: "Host or productNo not found"
+    put:
+      tags:
+      - product
+      summary: "Update an existing Product"
+      description: ""
+      operationId: updateProductByHostcodeAndProductno
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "hostCode"
+        in: "path"
+        description: ""
+        required: true
+        type: string
+      - name: "productNo"
+        in: "path"
+        description: ""
+        required: true
+        type: string
+      - in: "body"
+        name: "body"
+        description: "Product object that needs to be updated to the store"
+        required: true
+        schema:
+          $ref: "#/definitions/Product"
+      responses:
+        200:
+          description: successfully updated
+          schema:
+            $ref: '#/definitions/UpdateProductResponse'
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Product not found"
+        405:
+          description: "Validation exception"
   /objects:
     post:
       tags:
@@ -380,6 +423,31 @@ paths:
           description: successful operation
           schema:
             $ref: '#/definitions/AddImageResponse'
+        400:
+          description: Invalid input
+  /hosts:
+    post:
+      tags:
+      - host
+      summary: "Add a new HOst"
+      description: ""
+      operationId: addHost
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: body
+        name: body
+        description: Host object that needs to be added to the db.
+        required: true
+        schema:
+          $ref: '#/definitions/Host'
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: '#/definitions/AddHostResponse'
         400:
           description: Invalid input
 
@@ -605,6 +673,12 @@ definitions:
   UpdateProductResponse:
     type: object
     properties:
+      modified_count:
+        type: integer
+        format: int32
+      created_count:
+        type: integer
+        format: int32
       message:
         type: string
 
@@ -682,6 +756,26 @@ definitions:
           image_id:
             type: string
 
+  Host:
+    type: object
+    properties:
+      host_code:
+        type: string
+      host_url:
+        type: string
+      host_name:
+        type: string
+
+  AddHostResponse:
+    type: object
+    properties:
+      message:
+        type: string
+      data:
+        type: object
+        properties:
+          host_id:
+            type: string
 externalDocs:
   description: Find out more about BlueLens
   url: 'http://bluelens.io'
