# swagger_server/models/add_host_response.py
@@ -1,0 +1,91 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from swagger_server.models.add_host_response_data import AddHostResponseData
+from .base_model_ import Model
+from datetime import date, datetime
+from typing import List, Dict
+from ..util import deserialize_model
+
+
+class AddHostResponse(Model):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+    def __init__(self, message: str=None, data: AddHostResponseData=None):
+        """
+        AddHostResponse - a model defined in Swagger
+
+        :param message: The message of this AddHostResponse.
+        :type message: str
+        :param data: The data of this AddHostResponse.
+        :type data: AddHostResponseData
+        """
+        self.swagger_types = {
+            'message': str,
+            'data': AddHostResponseData
+        }
+
+        self.attribute_map = {
+            'message': 'message',
+            'data': 'data'
+        }
+
+        self._message = message
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'AddHostResponse':
+        """
+        Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The AddHostResponse of this AddHostResponse.
+        :rtype: AddHostResponse
+        """
+        return deserialize_model(dikt, cls)
+
+    @property
+    def message(self) -> str:
+        """
+        Gets the message of this AddHostResponse.
+
+        :return: The message of this AddHostResponse.
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message: str):
+        """
+        Sets the message of this AddHostResponse.
+
+        :param message: The message of this AddHostResponse.
+        :type message: str
+        """
+
+        self._message = message
+
+    @property
+    def data(self) -> AddHostResponseData:
+        """
+        Gets the data of this AddHostResponse.
+
+        :return: The data of this AddHostResponse.
+        :rtype: AddHostResponseData
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: AddHostResponseData):
+        """
+        Sets the data of this AddHostResponse.
+
+        :param data: The data of this AddHostResponse.
+        :type data: AddHostResponseData
+        """
+
+        self._data = data
+
