# swagger_server/models/host.py
@@ -1,0 +1,116 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from .base_model_ import Model
+from datetime import date, datetime
+from typing import List, Dict
+from ..util import deserialize_model
+
+
+class Host(Model):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+    def __init__(self, host_code: str=None, host_url: str=None, host_name: str=None):
+        """
+        Host - a model defined in Swagger
+
+        :param host_code: The host_code of this Host.
+        :type host_code: str
+        :param host_url: The host_url of this Host.
+        :type host_url: str
+        :param host_name: The host_name of this Host.
+        :type host_name: str
+        """
+        self.swagger_types = {
+            'host_code': str,
+            'host_url': str,
+            'host_name': str
+        }
+
+        self.attribute_map = {
+            'host_code': 'host_code',
+            'host_url': 'host_url',
+            'host_name': 'host_name'
+        }
+
+        self._host_code = host_code
+        self._host_url = host_url
+        self._host_name = host_name
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Host':
+        """
+        Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Host of this Host.
+        :rtype: Host
+        """
+        return deserialize_model(dikt, cls)
+
+    @property
+    def host_code(self) -> str:
+        """
+        Gets the host_code of this Host.
+
+        :return: The host_code of this Host.
+        :rtype: str
+        """
+        return self._host_code
+
+    @host_code.setter
+    def host_code(self, host_code: str):
+        """
+        Sets the host_code of this Host.
+
+        :param host_code: The host_code of this Host.
+        :type host_code: str
+        """
+
+        self._host_code = host_code
+
+    @property
+    def host_url(self) -> str:
+        """
+        Gets the host_url of this Host.
+
+        :return: The host_url of this Host.
+        :rtype: str
+        """
+        return self._host_url
+
+    @host_url.setter
+    def host_url(self, host_url: str):
+        """
+        Sets the host_url of this Host.
+
+        :param host_url: The host_url of this Host.
+        :type host_url: str
+        """
+
+        self._host_url = host_url
+
+    @property
+    def host_name(self) -> str:
+        """
+        Gets the host_name of this Host.
+
+        :return: The host_name of this Host.
+        :rtype: str
+        """
+        return self._host_name
+
+    @host_name.setter
+    def host_name(self, host_name: str):
+        """
+        Sets the host_name of this Host.
+
+        :param host_name: The host_name of this Host.
+        :type host_name: str
+        """
+
+        self._host_name = host_name
+
