# swagger_server/models/update_product_response.py
@@ -12,21 +12,31 @@ class UpdateProductResponse(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, message: str=None):
+    def __init__(self, modified_count: int=None, created_count: int=None, message: str=None):
         """
         UpdateProductResponse - a model defined in Swagger
 
+        :param modified_count: The modified_count of this UpdateProductResponse.
+        :type modified_count: int
+        :param created_count: The created_count of this UpdateProductResponse.
+        :type created_count: int
         :param message: The message of this UpdateProductResponse.
         :type message: str
         """
         self.swagger_types = {
+            'modified_count': int,
+            'created_count': int,
             'message': str
         }
 
         self.attribute_map = {
+            'modified_count': 'modified_count',
+            'created_count': 'created_count',
             'message': 'message'
         }
 
+        self._modified_count = modified_count
+        self._created_count = created_count
         self._message = message
 
     @classmethod
@@ -40,6 +50,48 @@ class UpdateProductResponse(Model):
         :rtype: UpdateProductResponse
         """
         return deserialize_model(dikt, cls)
+
+    @property
+    def modified_count(self) -> int:
+        """
+        Gets the modified_count of this UpdateProductResponse.
+
+        :return: The modified_count of this UpdateProductResponse.
+        :rtype: int
+        """
+        return self._modified_count
+
+    @modified_count.setter
+    def modified_count(self, modified_count: int):
+        """
+        Sets the modified_count of this UpdateProductResponse.
+
+        :param modified_count: The modified_count of this UpdateProductResponse.
+        :type modified_count: int
+        """
+
+        self._modified_count = modified_count
+
+    @property
+    def created_count(self) -> int:
+        """
+        Gets the created_count of this UpdateProductResponse.
+
+        :return: The created_count of this UpdateProductResponse.
+        :rtype: int
+        """
+        return self._created_count
+
+    @created_count.setter
+    def created_count(self, created_count: int):
+        """
+        Sets the created_count of this UpdateProductResponse.
+
+        :param created_count: The created_count of this UpdateProductResponse.
+        :type created_count: int
+        """
+
+        self._created_count = created_count
 
     @property
     def message(self) -> str:
